# configurable-chatbot-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  PDR-chatbot-rag.md  README.md  TASK-BREAKDOWN.md  docker-compose.yml  pyproject.toml
config/: eval_set.example.yaml  tables.example.yaml  tables.yaml
dbFile/: Dockerfile  init.sql
frontend/: README.md  angular.json  package-lock.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.config.ts  app.routes.ts
frontend/src/styles/: _base.scss  _tokens.scss
scripts/: eval_retrieval.py
src/ragchatbot/: models.py
src/ragchatbot/api/: dependencies.py  main.py
src/ragchatbot/chat/: query_rewrite.py  schemas.py  service.py  small_talk.py
src/ragchatbot/config/: __init__.py  settings.py  tables.py
src/ragchatbot/db/: job_store.py  session_store.py  source_adapter.py  vector_store.py  watermark_store.py
src/ragchatbot/ingestion/: chunker.py  embedder.py  extractor.py  normalizer.py  pipeline.py
src/ragchatbot/providers/: base.py  factory.py  (+2 more)
tests/: test_access_filter.py  test_admin_api.py  test_api_smoke.py  test_chat_route_provider_errors.py  test_chat_route_query_rewrite.py  test_chat_route_small_talk.py  test_chat_service.py  test_chunker.py  test_embedder.py  test_normalizer.py  test_provider_factory.py  test_query_rewrite.py  test_reranker.py  test_retrieval_pipeline.py  test_session_history_budget.py  test_settings.py  test_small_talk.py  test_source_adapter_errors.py  test_source_db_status.py  test_tables_config.py
(+45 files in other folders)
