[project]
name = "ragchatbot"
version = "0.1.0"
description = "RDBMS-agnostic RAG chatbot service: extraction, normalization, chunking, embedding, retrieval, and grounded chat generation."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "httpx>=0.27",
    "openai>=1.54",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mysql = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.1"]
oracle = ["oracledb>=2.4"]
rerank = ["sentence-transformers>=3.0"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
